learn restful CRUD

--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -69,7 +69,7 @@
 						</div>
 						<div class="form-group">
 							<label>Email</label>
-							<input name="email" type="email" class="form-control" placeholder="zhangsan@atguigu.com" th:value="${emp!=null}?${emp.email}">
+							<input name="email" type="email" class="form-control" placeholder="zhangsan@gsafety.com" th:value="${emp!=null}?${emp.email}">
 						</div>
 						<div class="form-group">
 							<label>Gender</label><br/>
